@@ -73,50 +73,41 @@
  * Show all services in the service list.
  */
 boolean_t status(char *level) {
-
-#define LINE 1024
-
         boolean_t status = false;
-        char buf[LINE];
-        char *auth = NULL;
-
         if (! exist_daemon()) {
                 LogError("Status not available -- the monit daemon is not running\n");
                 return status;
         }
-        Socket_T S;
+        Socket_T S = NULL;
         if (Run.httpd.flags & Httpd_Net)
                 // FIXME: Monit HTTP support IPv4 only currently ... when IPv6 is implemented change the family to Socket_Ip
                 S = Socket_create(Run.httpd.socket.net.address ? Run.httpd.socket.net.address : "localhost", Run.httpd.socket.net.port, Socket_Tcp, Socket_Ip4, (SslOptions_T){.use_ssl = Run.httpd.flags & Httpd_Ssl, .clientpemfile = Run.httpd.socket.net.ssl.clientpem}, NET_TIMEOUT);
-        else
+        else if (Run.httpd.flags & Httpd_Unix)
                 S = Socket_createUnix(Run.httpd.socket.unix.path, Socket_Tcp, NET_TIMEOUT);
-        if (! S) {
-                LogError("Error connecting to the monit daemon\n");
-                return status;
-        }
+        else
+                LogError("Status not available - monit http interface is not enabled, please add the 'set httpd' statement\n");
+        if (S) {
+                char *auth = Util_getBasicAuthHeaderMonit();
+                Socket_print(S, "GET /_status?format=text&level=%s HTTP/1.0\r\n%s\r\n", level, auth ? auth : "");
+                FREE(auth);
 
-        auth = Util_getBasicAuthHeaderMonit();
-        Socket_print(S,
-                     "GET /_status?format=text&level=%s HTTP/1.0\r\n%s\r\n",
-                     level, auth ? auth : "");
-        FREE(auth);
-
-        /* Read past HTTP headers and check status */
-        while (Socket_readLine(S, buf, LINE)) {
-                if (*buf == '\n' || *buf == '\r')
-                        break;
-                if (Str_startsWith(buf, "HTTP/1.0 200"))
-                        status = true;
-        }
-
-        if (! status) {
-                LogError("Cannot read status from the monit daemon\n");
-        } else {
-                while (Socket_readLine(S, buf, LINE)) {
-                        printf("%s", buf);
+                /* Read past HTTP headers and check status */
+                char buf[1024];
+                while (Socket_readLine(S, buf, sizeof(buf))) {
+                        if (*buf == '\n' || *buf == '\r')
+                                break;
+                        if (Str_startsWith(buf, "HTTP/1.0 200"))
+                                status = true;
                 }
-        }
-        Socket_free(&S);
 
+                if (! status) {
+                        LogError("Cannot read status from the monit daemon\n");
+                } else {
+                        while (Socket_readLine(S, buf, sizeof(buf)))
+                                printf("%s", buf);
+                }
+                Socket_free(&S);
+        }
         return status;
 }
+
